added link to public keys

--- a/ru/about.html
+++ b/ru/about.html
@@ -14,7 +14,8 @@ title: Обо мне
         <p class="view"><a href="https://github.com/arcan1s">Профиль на GitHub</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">Профиль TU на archlinux.org</a><br>
         <a href="http://istina.msu.ru/profile/arcanis">Некоторые из моих публикаций</a><br>
-        PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
+        PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
+        <a href="ftp://repo.arcanis.name/public">Публичные ключи</a></p>
 
         <h2>Контакты</h2>
         <p class="view">Никнейм: arcanis/arcan1s<br>
