--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@ title: About me
         <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on archlinux.org</a><br>
         <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a><br>
-        PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
+        PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
+        <a href="ftp://repo.arcanis.name/public">Public keys</a></p>
 
         <h2>Contacts</h2>
         <p class="view">Alias: arcanis/arcan1s<br>
