--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ title: About me
 {% highlight bash %}
 -----BEGIN GEEK CODE BLOCK-----
 Version: 3.1
-GS/GCS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PGP+++ t++ 5? X R++ !tv b+++ DI? D+ G e++++ h+ r y+
+GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PGP+++ t++ 5? X R++ !tv b+++ DI? D+ G e++++ h+ r y+
 ------END GEEK CODE BLOCK------
 {% endhighlight %}
 
