--- a/ru/_posts/2014-03-06-site-changes.html
+++ b/ru/_posts/2014-03-06-site-changes.html
@@ -30,16 +30,16 @@ domain.name.           912     IN      A       192.30.252.154
   <li>Поскольку репозиторий требует ftp, то перевел samba на ftp. Проблему доступа решил опциями монтирования:
 {% highlight bash %}
 # только чтение
-/home/arcanis/music                         /mnt/ftp/music  ext4    defaults,bind,ro   0 0
-/home/arcanis/arch/repo                     /mnt/ftp/repo   ext4    defaults,bind,ro   0 0
+/home/arcanis/music                         /srv/ftp/music  ext4    defaults,bind,ro   0 0
+/home/arcanis/arch/repo                     /srv/ftp/repo   ext4    defaults,bind,ro   0 0
 # чтение и запись (файл ограничен 2 Гб)
-/home/arcanis/share.fs                      /mnt/ftp/share  ext4    defaults,rw   0 0
+/home/arcanis/share.fs                      /srv/ftp/share  ext4    defaults,rw   0 0
 {% endhighlight %}
 Для отсутствия доступа извне к директории с музыкой, используется логин под специальным пользователем и ограничение <code>anon_world_readable_only=YES</code>.
 Также привожу свой файл настроек <code>/etc/vsftpd.conf</code>:
 {% highlight bash %}
 anonymous_enable=YES
-anon_root=/mnt/ftp
+anon_root=/srv/ftp
 local_enable=YES
 write_enable=YES
 local_umask=022
@@ -54,7 +54,7 @@ nopriv_user=music
 ascii_upload_enable=YES
 ftpd_banner=Welcome to arcanis
 chroot_local_user=YES
-local_root=/mnt/ftp/music
+local_root=/srv/ftp/music
 listen=YES
 {% endhighlight %}
 Теперь добавим переадресацию с <code>repo.arcanis.name</code> на нужный IP адрес. Для этого внесем следующие записи в DNS:
