--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -387,6 +387,8 @@ sudo make install
   </tr>
 </table>
 
+<p align="justify"><b>Temperature units:</b> Select units for temperature. Available units are Celsius, Farenheit and Kelvin.</p>
+
 <p align="justify"><b>Temperature devices:</b> List of devices, which will be observed in temperature label (combo box items come from <code>sensors</code>). List widget is editable, delete key will remove current item.</p>
 
 <p align="justify"><b>Mount points:</b> List of mount points, which will be observed in HDD label (combo box items come from <code>mount</code>). List widget is editable, delete key will remove current item.</p>
