--- a/_posts/2014-05-07-my-desktop.html
+++ b/_posts/2014-05-07-my-desktop.html
@@ -61,8 +61,11 @@ description: Here is a short paper devoted to the set of applications and extens
   <li><p align="justify"><b>Auto Refresh</b> is used for auto update pages.</p></li>
   <li><p align="justify"><b>Clone tab</b> adds "Clone tab" function.</p></li>
   <li><p align="justify"><b>Close tab by double click</b>.</p></li>
-  <li><p align="justify"><b>HideScrollbars</b> is used for hiding scrollbars, because they look horrible in Qt environment.</p></li>
+  <li><p align="justify"><b>New scrollbars</b> is used for customizing scrollbars, because original ones look horrible in Qt environment.</p></li>
+  <li><p align="justify"><b>NoScript</b> is used for I2P and Tor, for example.</p></li>
   <li><p align="justify"><b>PrivateTab</b> adds private tab (not the window).</p></li>
+  <li><p align="justify"><b>Proxy Selector</b> adds an ability to use multiple proxies.</p></li>
+  <li><p align="justify"><b>QuickJava</b> is used with the same goal as NoScript.</p></li>
   <li><p align="justify"><b>RSS icon in url bar</b>.</p></li>
   <li><p align="justify"><b>Dictionaries for spellchecking</b> (eng/rus).</p></li>
   <li><p align="justify"><b>Space Next</b>. If I tap a space at the bottom of a page, it will be perceived as pushing the "Next" button.</p></li>
