--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -16,7 +16,7 @@ links:
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#information"><span class="octicon octicon-link"></span></a>Information</h2>
 <p align="justify">A minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).</p>
-<p align="justify"><b>NOTE:</b> LOOKING FOR TRANSLATORS!</p>
+<p align="justify"><b>NOTE:</b> <a href="https://github.com/arcan1s/pytextmonitor/blob/master/TRANSLATORS.md">LOOKING FOR TRANSLATORS!</a></p>
 
 <h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
