--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -17,7 +17,7 @@ links:
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#information"><span class="octicon octicon-link"></span></a>Информация</h2>
 <p align="justify">Минималистичный пламоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также данный пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).</p>
-<p align="justify"><b>ВНИМАНИЕ:</b> <a href="https://github.com/arcan1s/pytextmonitor/blob/master/TRANSLATORS.md">НУЖНЫ ПЕРЕВОДЧИКИ!</a></p>
+<p align="justify"><b>ВНИМАНИЕ:</b> <a href="https://github.com/arcan1s/pytextmonitor/issues/14">НУЖНЫ ПЕРЕВОДЧИКИ!</a></p>
 
 <h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
 <ul>
