update ptm pages

--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -72,7 +72,7 @@ sudo make install
   <li>net-tools <i>(опционально, для всплывающих подсказок)</i></li>
   <li>sysstat <i>(опционально, для всплывающих подсказок)</i></li>
   <li>hddtemp <i>(опционально, для контроля за температурой HDD)</i></li>
-  <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.musicpd.org/">mtd</a> или <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
+  <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.clementine-player.org/">clementine</a>, <a href="http://www.musicpd.org/">mtd</a> или <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
   <li>проприетарный видеодрайвер <i>(опционально, для контроля за GPU)</i></li></li>
 </ul>
 <!-- end of install block -->
