edited ptm page

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -8,6 +8,7 @@ developers:
     - Ernesto Avilés Vzqz (Spanish translation)
     - Mermouy (French translation)
     - underr (Brazillian Portuguese translation)
+    - Виктор Слободян (Ukrainian translation)
 license: GPLv3
 links:
     - Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
