--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -9,6 +9,7 @@ developers:
     - Ernesto Avilés Vzqz (перевод на испанский)
     - Mermouy (перевод на французский)
     - underr (перевод на бразильский португальский)
+    - Виктор Слободян (перевод на украинский)
 license: GPLv3
 links:
     - Страница плазмоида на <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
